--- a/DuotechCatering.html
+++ b/DuotechCatering.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Duotech Catering</title>
+<title>Sport Magazine</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="">
@@ -16,29 +16,29 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Duotech Catering</a>
+    <a href="#home" class="w3-bar-item w3-button">Sport Magazine</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#purchase" class="w3-bar-item w3-button">Purchase</a>
       <a href="#menu" class="w3-bar-item w3-button">Menu</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#about" class="w3-bar-item w3-button">About</a>
     </div>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="" alt="Hamburger Catering" width="1600" height="800">
+  <img class="w3-image" src="messi.png" alt="Sport Magazine" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Duotech Catering</h1>
+    <h1 class="w3-xxlarge">Sport Magazine</h1>
   </div>
 </header>
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:1100px">
 
-  <!-- About Section -->
-  <div class="w3-row w3-padding-64" id="about">
+  <!-- Purchase Section -->
+  <div class="w3-row w3-padding-64" id="purchase">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
      <img src="" class="w3-round w3-image w3-opacity-min" alt="Table Setting 2" width="600" height="750">
     </div>
